# WMBus-Smartmeter

./: README.md  config.example.yaml  pyproject.toml
deploy/: meterreader.service
meterreader/: __init__.py  __main__.py  api.py  cc1101.py  config.py  crc.py  crypto.py  decode.py  encoding.py  errors.py  frame.py  gpio.py  readings.py  records.py  registers.py  service.py
tests/: conftest.py  test_api.py  test_crc.py  test_encoding.py  test_frame.py  test_records.py
